compiler/src/test/test_cases/invalid/syntaxErr/forLoop/noUpdate.wacc
# No update of looping variable found

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  for (int i = 0, i < 5) do
    println "How much should I increment the looping variable by"
  done
end